# vx

./: .gitignore  LICENSE  README.md
vx-rs/: CHANGELOG.md  Cargo.toml
vx-rs/.cargo/: config.toml
vx-rs/Scripts/: evaluate-prompts.sh
vx-rs/src/: main.rs
vx-rs/tests/: error_paths.rs  metal_linkage.rs  stream_no_data_loss.rs
vx-ui/: CHANGELOG.md  Package.swift
vx-ui/AppBundle/: Info.plist  vx.entitlements
vx-ui/Resources/: Info.plist  vx.icns
vx-ui/Sources/: AppContextDetector.swift  AppCoordinator.swift  AppState.swift  AudioCapture.swift  ContextDebugController.swift  ContextPromptStore.swift  DebugLogView.swift  DebugLogger.swift  DictationContextResolver.swift  DictationHUD.swift  DictationMode.swift  DictationProcessor.swift  DistributionConfig.swift  FnKeyTap.swift  GoModeSegmenter.swift  GoModeSubmitStrategy.swift  HotkeyMonitor.swift  ModelManager.swift  Overlay.swift  PreferencesView.swift  ResourceLocator.swift  RuleEngine.swift  RuleStore.swift  RustTranscriber.swift  SoundPlayer.swift  SpokenSubmitCommand.swift  SystemVolumeController.swift  TextInserter.swift  TextPostProcessor.swift  TranscriptionHistory.swift  TransformationPipeline.swift  UpdateChecker.swift  WhisperModel.swift
vx-ui/Sources/App/: VXApp.swift
vx-ui/Tests/VXLibTests/: DictationContextResolverTests.swift  DictationProcessorTests.swift  GoModeSegmenterTests.swift  GoModeSubmitStrategyTests.swift  InMemoryTranscriber.swift  RuleEngineTests.swift  RuleStoreLintTests.swift  RuleStoreReloadTests.swift  RuleStoreResolutionTests.swift  RuleStoreYAMLTests.swift  (+8 more)
